fix menu only mobile overflow

--- a/_sass/components/menu.sass
+++ b/_sass/components/menu.sass
@@ -90,6 +90,7 @@
         .menu-burger-only-mobile &
             background: transparent
             margin-left: auto
+            overflow: visible
             padding-top: 0
             position: static
             transform: none
